<resources>
    <string name="app_name">Health Calc</string>

    <string name="app_titulo">HEALTH\nCALC</string>

    <string name="login_activity_login">Login</string>
    <string name="login_activity_subtitulo">Faça login para continuar</string>
    <string name="login_activity_email">E-mail</string>
    <string name="login_activity_senha">Senha</string>
    <string name="login_activity_entrar">Entrar</string>
    <string name="login_activity_lembrar_me">Lembrar-me</string>
    <string name="login_activity_esqueci_a_senha">Esqueci a senha</string>
    <string name="login_activity_nao_tem_uma_conta">Não tem uma conta?</string>
    <string name="login_activity_criar_uma_conta_agora">Criar uma conta agora</string>
    <string name="trocar_foto">Trocar Foto</string>
    <string name="dados_para_autentica_o">Dados para autenticação</string>
    <string name="dados_pessoais">Dados pessoais</string>
    <string name="sexo">Sexo</string>

    <string-array name="niveis">
        <item>Atividade Leve</item>
        <item>Atividade Moderada</item>
        <item>Atividade Intensa</item>
    </string-array>

</resources>