<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroUsuario"
    android:orientation="vertical"
    android:background="#0D070707">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="32dp"
            app:cardCornerRadius="50dp"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/seu_madruga"
                android:scaleType="centerCrop"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:text="@string/trocar_foto"
            android:textColor="@color/primary"
            android:textSize="24sp"

            android:fontFamily="@font/montserrat"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:scrollbars="none"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="12dp"

            >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dados_para_autentica_o"
                    android:textSize="18sp"
                    android:padding="8dp"
                    android:drawableStart="@drawable/lock_24"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:drawableTint="@color/primary"/>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/login_activity_email"
                android:inputType="textEmailAddress"
                app:boxBackgroundColor="#0D070707">

                <EditText
                    android:id="@+id/edit_novo_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                     />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:boxBackgroundColor="#0D070707"
                android:hint="@string/login_activity_senha"
                app:passwordToggleEnabled="true"
                >

                <EditText
                    android:id="@+id/edit_nova_senha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:inputType="numberPassword"/>


            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dados_pessoais"
                android:textSize="18sp"
                android:padding="8dp"
                android:drawableStart="@drawable/person_24"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:drawableTint="@color/primary"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="Nome"
                android:inputType="textCapWords"
                app:boxBackgroundColor="#0D070707">

                <EditText
                    android:id="@+id/edit_novo_nome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="Profissão"
                android:inputType="text"
                app:boxBackgroundColor="#0D070707">

                <EditText
                    android:id="@+id/edit_nova_profissao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="Altura"
                android:inputType="number"
                app:boxBackgroundColor="#0D070707">

                <EditText
                    android:id="@+id/edit_nova_altura"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="Data de Nascimento"
                app:boxBackgroundColor="#0D070707">

                <EditText
                    android:id="@+id/edit_nova_datadenascimento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:focusable="false"
                    android:drawablePadding="8dp" />


            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexo"
                android:layout_marginTop="16dp"
                android:textSize="16sp"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <RadioButton
                    android:id="@+id/radio_feminino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Feminino"/>

                <RadioButton
                    android:id="@+id/radio_masculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Masculino"/>

            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f666"/>


        </LinearLayout>

    </ScrollView>


</LinearLayout>